# daily-portrait

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  ref.md
daily_portrait/: __init__.py  alignment.py  filter.py  local_settings.sample.py  settings.py  utils.py  video.py
daily_portrait/utils/: __init__.py  alignment.py  image.py
